Fix QuickSliver UI when using phone, collapse nvabar doesnt visible like this http://imgur.com/a/zrhcD

--- a/Sources/EPiServer.Reference.Commerce.Site/Styles/Recommendations/recommendations.less
+++ b/Sources/EPiServer.Reference.Commerce.Site/Styles/Recommendations/recommendations.less
@@ -90,3 +90,6 @@ div.recommendations {
         border: none;
     }
 }
+.collapse{
+    display:none;
+}
